2006-11-10  Nick Clifton  <nickc@redhat.com>

	PR gas/3456:
	* config/obj-elf.c (obj_elf_version): Do not include the name
	field's padding in the namesz value.

2006-11-09  Thiemo Seufer  <ths@mips.com>

	* config/tc-mips.c: Fix outdated comment.

2006-11-08  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.h (CpuPNI): Removed.
	(CpuUnknownFlags): Replace CpuPNI with CpuSSE3.
	* config/tc-i386.c (md_assemble): Likewise.

2006-11-08  Alan Modra  <amodra@bigpond.net.au>

	* symbols.c (symbol_create, symbol_clone): Don't set udata.p.

2006-11-06  David Daney  <ddaney@avtrex.com>

	* config/tc-mips.c (pic_need_relax): Return true for section symbols.

2006-11-06  Thiemo Seufer  <ths@mips.com>

	* doc/c-mips.texi (-march): Document sb1a.

2006-11-06  Thiemo Seufer  <ths@mips.com>

	* config/tc-mips.c (mips_cpu_info_table): Remove 24k/24ke aliases.
	34k always has DSP ASE.

2006-11-03  Thiemo Seufer  <ths@mips.com>

	* config/tc-mips.c (md_pcrel_from_section): Disallow PC relative
	MIPS16 instructions referencing other sections, unless they are
	external branches.

2006-11-03  Thiemo Seufer  <ths@mips.com>

	* config/tc-mips.c (mips_cpu_info_table): The 25Kf is a MIPS64
	release 1 CPU.

2006-11-03  Jakub Jelinek  <jakub@redhat.com>

	* dw2gencfi.c (struct fde_entry): Add per_encoding, lsda_encoding,
	personality and lsda.
	(struct cie_entry): Add per_encoding, lsda_encoding and personality.
	(alloc_fde_entry): Initialize per_encoding and lsda_encoding.
	(cfi_pseudo_table): Handle .cfi_personality and .cfi_lsda.
	(dot_cfi_personality, dot_cfi_lsda, encoding_size): New functions.
	(output_cie): Output personality including its encoding and LSDA encoding.
	(output_fde): Output LSDA.
	(select_cie_for_fde): Don't share CIE if personality, its encoding or
	LSDA encoding are different.  Copy the 3 fields from fde_entry to
	cie_entry.
	* doc/as.texinfo (.cfi_personality, .cfi_lsda): Document.

	* subsegs.h (struct frchain): Add frch_cfi_data field.