@@ -1,0 +1,3 @@
+	.text
+.Lused_label:
+	.word	.Lused_label
